# SPDX-FileCopyrightText: Copyright (c) 2023 Jose D. Montoya
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "micropython-pca9685"
description = "MicroPython Driver for the PCA9685"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "JDM", email = "xxyx@mailmeto.mozmail.com"}
]
urls = {Homepage = "https://github.com/jposada202020/MicroPython_PCA9685"}
keywords = [
    "sensor",
    "micropython",
    "pca9685",
    "micropython",
    "driver",
    "pca9685",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: Implementation :: MicroPython",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["micropython_pca9685"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
